# Layak

./: .env.example  .firebaserc  .gitignore  README.md  firestore.indexes.json  firestore.rules  next.config.ts  package.json  pnpm-lock.yaml
backend/: .gcloudignore  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/agents/: chat_prompt.py  discovery_agent.py  gemini.py  narration.py  optimizer_prompt.py  root_agent.py
backend/app/data/: discovery_sources.yaml  scheme_interactions.yaml
backend/app/fixtures/: __init__.py  aisyah.py
backend/app/routes/: admin.py  auth.py  chat.py  evaluations.py  quota.py  schemes.py  user.py  what_if.py
backend/app/rules/: __init__.py  _i18n.py  (+20 more)
backend/scripts/: __init__.py  benchmark_strategy_compute.py  benchmark_what_if.py  generate_aisyah_fixtures.py  generate_demo_fixtures.py  probe_gemini_3_1_flash_lite.py  probe_gemini_3_flash.py  prune_free_tier.py  seed_verified_schemes.py  seed_vertex_ai_search.py  smoke_chat.py
backend/tests/: conftest.py  test_admin_auth.py  test_auth.py  test_auth_routes.py  test_benchmark_strategy_compute.py  test_benchmark_what_if.py  test_budi95.py  test_chat_guardrails.py  test_chat_prompt.py  test_chat_prompt_handoff.py  test_chat_routes.py  test_classify_form_be.py  test_dependant_schema.py  test_discovery_schema.py  test_error_humanization.py  test_evaluation_persistence.py  test_evaluations_routes.py  test_gemini_client.py  test_generate_with_retry.py  test_i_saraan.py  test_jkm_bkk.py  test_jkm_warga_emas.py  test_lhdn_form_b.py  test_manual_entry.py  test_mykasih.py  test_perkeso_sksps.py  test_phase14_schemes.py  test_phase15_schemes.py  test_pipeline_i18n.py  test_pipeline_narration.py  test_prune_free_tier.py  test_quota_routes.py  test_rate_limit.py  test_rate_limit_helpers.py  test_rule_copy_coverage.py  test_sanitize.py  test_str_2026.py  test_strategy_optimizer.py  test_user_routes.py  test_vertex_ai_search.py  (+1 more)
(+306 files in other folders)
